; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/secboot/extr_acr_r352.c_acr_r352_fini.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/secboot/extr_acr_r352.c_acr_r352_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_acr = type { i32 }
%struct.nvkm_secboot = type { i32 }
%struct.acr_r352 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.nvkm_acr*, %struct.nvkm_secboot*, i32)* @acr_r352_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @acr_r352_fini(%struct.nvkm_acr* %0, %struct.nvkm_secboot* %1, i32 %2) #0 {
  %4 = alloca %struct.nvkm_acr*, align 8
  %5 = alloca %struct.nvkm_secboot*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.acr_r352*, align 8
  store %struct.nvkm_acr* %0, %struct.nvkm_acr** %4, align 8
  store %struct.nvkm_secboot* %1, %struct.nvkm_secboot** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.nvkm_acr*, %struct.nvkm_acr** %4, align 8
  %9 = call %struct.acr_r352* @acr_r352(%struct.nvkm_acr* %8)
  store %struct.acr_r352* %9, %struct.acr_r352** %7, align 8
  %10 = load %struct.acr_r352*, %struct.acr_r352** %7, align 8
  %11 = load %struct.nvkm_secboot*, %struct.nvkm_secboot** %5, align 8
  %12 = call i32 @acr_r352_shutdown(%struct.acr_r352* %10, %struct.nvkm_secboot* %11)
  ret i32 %12
}

declare dso_local %struct.acr_r352* @acr_r352(%struct.nvkm_acr*) #1

declare dso_local i32 @acr_r352_shutdown(%struct.acr_r352*, %struct.nvkm_secboot*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
